--- a/.github/workflows/deploy-jekyll.yml
+++ b/.github/workflows/deploy-jekyll.yml
@@ -44,7 +44,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    permissions: write-all
+    permissions:
+      pages: write
+      id-token: write
     needs: build
     steps:
       - name: Deploy to GitHub Pages
