--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Poole
-tagline: The Jekyll Butler
+title: 브루스의 블로그
+tagline: 아마도 재밌음
 url: https://getpoole.com
 paginate: 1
 baseurl: ""
