--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ exclude:
 
 sass:
   sass_dir: _sass
-  style: :compressed
+  style: compressed
 
 # Options
 
 # Replace this value and uncomment to enable Google Analytics tracking
-# ga_analytics: UA-000000-0
+ga_analytics: G-B1PRQGKYBL
 
 # Specify the author for blog posts
 author:
