--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Setup
 title: 브루스의 블로그
 tagline: 코틀린 게임 개발 블로그
-url: https://getpoole.com
+url: https://bruce0203.github.io
 paginate: 1
 baseurl: ""
-permalink: none
+permalink: /:categories/:title
 
 # Gems
 plugins:
